# claude-code-clone

./: .dockerignore  .eslintrc.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  Dockerfile  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  bunfig.toml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
aur/: .SRCINFO  PKGBUILD
debian/: changelog  control  copyright  rules
docs/: AGENT_ORCHESTRATOR.md  CHANGELOG.md  FAQ.md  README.md  architecture.md
docs/api/: core.md  tools.md  ui.md
docs/developer/: architecture.md  contributing.md  hooks.md  plugins.md  skills.md  testing.md
docs/user/: commands.md  configuration.md  getting-started.md  installation.md  shortcuts.md  tools.md  troubleshooting.md  usage.md
examples/: CLAUDE.md  agent-orchestrator-demo.ts  basic-usage.ts  basic_usage.py  context_management.py  custom_tools.py  multi_agent.py  session_management.py  ui_demo.py
examples/hooks/: README.md  example-hook.ts
examples/plugins/: README.md  example-plugin.ts
examples/skills/: README.md  custom-skill-example.ts
homebrew/: claude-code-clone.rb
rpm/: claude-code-clone.spec
scripts/: build.cjs  build.js  pack.cjs  pack.js  postinstall.js  release.cjs  setup-config.js  setup.bat  setup.ps1  setup.sh  version.cjs
scripts/install/: install.js  install.ps1  install.sh
src/: cli.tsx  index.ts  version.ts
src/advanced/: __init__.py
src/agent/: aggregator.ts  checkpoint.ts  index.ts  message-bus.ts  orchestrator.ts  planner.ts  pool.ts  sub-agent.ts  task-graph.ts
src/commands/: Command.ts  CommandParser.ts  CommandRegistry.ts  index.ts
src/commands/agent/: agent-kill.ts  agent-list.ts  agent-spawn.ts  agent-status.ts
src/commands/debug/: debug-context.ts  debug-log.ts  debug-tokens.ts  debug-tools.ts
src/commands/git/: git-branch.ts  (+9 more)
src/config/: index.ts
src/context/: ContextBudget.ts  ContextCompressor.ts  ContextManager.ts  ContextRelevance.ts  index.ts
src/core/: AgentLoop.ts  ContextManager.ts  PermissionManager.ts  QueryEngine.ts  SessionManager.ts  StreamingHandler.ts  TokenTracker.ts  __init__.py  agent.py  base-classes.ts  context.py  coordinator.py  errors.ts  events.ts  index.ts  interfaces.ts  llm_client.py  session.py  types.py
src/diff_viewer/: __init__.py
src/hooks/: HookEngine.ts  HookRegistry.ts  HookRunner.ts  index.ts
src/innovations/: auto_mode.py  coordinator.py
src/lib/: anthropic.ts  index.ts
src/mcp/: MCPClient.ts  MCPDiscovery.ts  MCPProtocol.ts  MCPServer.ts  MCPTransport.ts  index.ts
src/nl_to_bash/: __init__.py
src/plugins/: Plugin.ts  PluginLoader.ts  PluginManager.ts  PluginRegistry.ts  PluginValidator.ts  index.ts
src/project_context/: __init__.py
src/query-engine/: index.ts
src/session/: index.ts
src/skills/: Skill.ts  SkillComposer.ts  SkillLoader.ts  SkillManager.ts  SkillRegistry.ts  index.ts
src/telemetry/: Analytics.ts  ErrorReporter.ts  TelemetryClient.ts  index.ts
src/tools/: Tool.ts  ToolExecutor.ts  ToolRegistry.ts  ToolSchema.ts  __init__.py  base.py  bash_tool.py  code_tools.py  file_tools.py  index.ts  permission.py  registry.py
src/types/: index.ts
src/ui/: README.md  __init__.py  app.tsx  chat.py  commands.py  config_ui.py  file_browser.py  index.ts  main_ui.py  status.py  styles.py  themes.py
src/update/: UpdateChecker.ts  UpdateDownloader.ts  UpdateInstaller.ts
src/utils/: array.ts  async.ts  errors.ts  fs.ts  hash.ts  index.ts  logger.ts  object.ts  path.ts  string.ts  time.ts  validation.ts
tests/: TokenTracker.test.ts  global.d.ts  setup.ts  test_tools.py  test_ui.py
tests/e2e/: BasicWorkflow.test.ts  ComplexTask.test.ts  ErrorRecovery.test.ts
tests/integration/: AgentConversation.test.ts  ContextCompression.test.ts  MCPIntegration.test.ts  PluginSystem.test.ts  ToolExecution.test.ts
tests/mocks/: MockFS.ts  MockLLM.ts  MockTools.ts
tests/performance/: ContextCompression.perf.ts  TokenTracking.perf.ts  ToolExecution.perf.ts
(+294 files in other folders)
